Avoid scrollbar situation.

--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ a {
 
 #help {
   margin: 100px;
+  display: none;
 }
 dd {
   margin: 0;
